--- a/scss/partials/_media.scss
+++ b/scss/partials/_media.scss
@@ -13,6 +13,8 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
+                    background-size: 400px;
+                    background-position: bottom, center 65px;
 
                     .testimonial {
                         flex-direction: column-reverse;
